Змінено текс на жирний у нижньому колонтитулі

--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 
   <footer id="contacts">
     <div class="footer-container">
-      <p>Copyright © 2025 | mob. +380 12 345-67 89 | email: info@freddiemercury.com | skype: freddie_fan_club</p>
+      <p><b>Copyright © 2025 | mob. +380 12 345-67 89 | email: info@freddiemercury.com | skype: freddie_fan_club</b></p>
       <address>
-        Контакти: Фан-клуб Фредді Мерк'юрі, вул. Музична, 123, Київ, Україна
+        <b>Контакти: Фан-клуб Фредді Мерк'юрі, вул. Музична, 123, Київ, Україна</b>
       </address>
     </div>
   </footer>
